[package]
name = "without-a-bundler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"
