[package]
name = "without-a-bundler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "console"] }

[dev-dependencies]
futures = "0.3.31"
js-sys = "0.3.76"
wasm-bindgen-futures = "0.4.49"
wasm-bindgen-test = "0.3.49"
