[package]
name = "without-a-bundler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "HtmlImageElement", "Response", "Window", "console"] }

[dev-dependencies]
js-sys = "0.3.76"
wasm-bindgen-test = "0.3.49"
